# game1

./: CMakeLists.txt  build.bat  msvc_vars.bat  todo.txt
assets/shaders/: render_light_using_gbuffer.frag  render_to_gbuffer.frag  render_to_gbuffer.vert
docs/: conventions.txt
run_tree/assets/: barrel.fbx  crate.dae  crate.fbx  keyOGA.mtl  monkey.mtl  player.fbx  signpost.fbx  treasure_chest.fbx  untitled.dae  well.coveredopen.mtl
run_tree/assets/shaders/: common.glh  gamma_correction.frag  gamma_correction.glsl  null_shader.glsl  picking.frag  picking.glsl  picking.vert  render_light_shadowmap.glsl  render_light_using_gbuffer.frag  render_light_using_gbuffer.glsl  render_light_using_gbuffer.vert  render_plain_texture.frag  render_plain_texture.glsl  render_plain_texture.vert  render_rect.frag  render_rect.glsl  render_rect.vert  render_text.frag  render_text.glsl  render_text.vert  render_to_gbuffer.frag  render_to_gbuffer.glsl  render_to_gbuffer.vert  render_water.frag  render_water.glsl  render_water.vert
src/: FBX.jai  OVR.jai  asset_manager.jai  build.cpp  dae_parser.jai  editor.jai  first.jai  game.h  game.jai  general.h  gl_api.jai  html_parser.cpp  html_parser.h  html_parser.jai  imgui.jai  lexer.h  lexer.jai  main.cpp  main.jai  math.jai  mesh_utils.jai  miniz.c  nbt.jai  nuklear.c  nuklear.jai  obj_reader.cpp  obj_reader.h  os_api.h  os_api.jai  os_linux.jai  os_macosx.jai  os_windows.cpp  os_windows.jai  physics.jai  render_light_using_gbuffer.glsl  render_to_gbuffer.glsl  renderer.h  renderer.jai  renderer_gl.cpp  stb.cpp  (+4 more)
(+1 files in other folders)
